--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         padding: 4em;
       "
     >
-      <a href="https://github.com/syedhannan" style="color: black">Github</a> |
-      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black"
+      <a href="https://github.com/syedhannan" target="blank" style="color: black">Github</a> |
+      <a href="https://www.linkedin.com/in/isyedhannan" target="blank" style="color: black"
         >LinkedIn</a
       >
       <h4>© Syed Abdul Hannan</h4>
