--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         id="fibonacci_input"
         class="form-control"
         type="number"
-        placeholder="Enter the digit to get fibonacci series"
+        placeholder="Enter the limit for Fibonacci Series"
       />
       <br />
       <button
