--- a/index.html
+++ b/index.html
@@ -76,25 +76,18 @@
       <h3 id="title"></h3>
       <p id="output" style="word-break: break-all !important"></p>
     </div>
-    <br />
-    <br />
-    <br />
-    <div
-      style="
-        height: 10em;
-        background-color: #66fcf1;
-
-        text-align: center;
-        font-size: large;
-        color: #0b0c10;
-        padding: 4em;
-      "
-    >
-      <a href="https://github.com/syedhannan" target="_blank" style="color: black">Github</a> |
-      <a href="https://www.linkedin.com/in/isyedhannan" target="_blank" style="color: black"
+  <footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);" >
+    
+     <a href="https://github.com/syedhannan" style="color: black" target="_blank">Github</a> |
+      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black" target="_blank"
         >LinkedIn</a
       >
-      <h4>© Syed Abdul Hannan</h4>
-    </div>
+      <h4 style="color: black">© Syed Abdul Hannan</h4>
+  </div>
+  <!-- Copyright -->
+</footer>
+ 
   </body>
 </html>
