--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         id="fibonacci_input"
         class="form-control"
         type="number"
-        placeholder="Enter the limit for Fibonacci Series"
+        placeholder="Enter the limit for Fibonacci Series (Max = 1477)"
       />
       <br />
       <button
