--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Fibonacci Series</title>
   </head>
+
   <body
     style="
       background-color: #0b0c10;
@@ -17,6 +27,7 @@
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
         sans-serif;
       font-size: large;
+      height: auto;
     "
   >
     <script>
@@ -40,6 +51,8 @@
         document.getElementById("output").innerHTML = arr;
       }
     </script>
+
+    <!-- HEADER SECTION  -->
     <div
       style="
         height: 5em;
@@ -54,12 +67,14 @@
     </div>
     <br />
     <br />
+
+    <!-- BODY SECTION  -->
     <div style="text-align: center; border: 3px solid #1f2833; padding: 2em">
       <input
         id="fibonacci_input"
-        class="form-control"
+        class="form-control input-group mb-3 input-group-text"
         type="number"
-        placeholder="Enter the limit for Fibonacci Series (Max = 1477)"
+        placeholder="Enter the digit to get fibonacci series"
       />
       <br />
       <button
@@ -71,22 +86,74 @@
         Submit
       </button>
 
+      <br />
+      <br />
       <h3 id="title"></h3>
       <p id="output" style="word-break: break-all !important"></p>
+      <br /><br /><br />
+      <br /><br />
     </div>
-  <footer class="bg-light text-center text-lg-start">
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);" >
-    
-     <a href="https://github.com/syedhannan" style="color: black" target="_blank">Github</a> |
-      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black" target="_blank"
+
+    <!-- FOOTER SECTION -->
+
+    <div
+      style="
+        height: 10em;
+        background-color: #66fcf1;
+        text-align: center;
+        font-size: large;
+        color: #0b0c10;
+        padding: 4em;
+      "
+    >
+      <a href="https://github.com/syedhannan" style="color: black">Github</a> |
+      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black"
         >LinkedIn</a
       >
-      <h4 style="color: black">© Syed Abdul Hannan</h4>
-  </div>
-  <!-- Copyright -->
-</footer>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- 
+      <h4>© Syed Abdul Hannan</h4>
+    </div>
+    <!-- <div
+      style="
+        background-color: #66fcf1;
+        width: 100%;
+        position: relative;
+        bottom: 0;
+      "
+    >
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item">
+            <a
+              href="https://github.com/syedhannan"
+              class="nav-link px-2 text-muted"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.linkedin.com/in/isyedhannan"
+              class="nav-link px-2 text-muted"
+              >Linkedin</a
+            >
+          </li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2021 Syed Abdul Hannan</p>
+      </footer>
+    </div> -->
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
