--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         id="fibonacci_input"
         class="form-control input-group mb-3 input-group-text"
         type="number"
-        placeholder="Enter the digit to get fibonacci series"
+        placeholder="Enter the digit to get fibonacci series (MAX = 1477)"
       />
       <br />
       <button
