--- a/index.html
+++ b/index.html
@@ -106,40 +106,13 @@
         padding: 4em;
       "
     >
-      <a href="https://github.com/syedhannan" style="color: black">Github</a> |
-      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black"
+      <a href="https://github.com/syedhannan" style="color: black" target="_blank">Github</a> |
+      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black" target="_blank"
         >LinkedIn</a
       >
       <h4>© Syed Abdul Hannan</h4>
     </div>
-    <!-- <div
-      style="
-        background-color: #66fcf1;
-        width: 100%;
-        position: relative;
-        bottom: 0;
-      "
-    >
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item">
-            <a
-              href="https://github.com/syedhannan"
-              class="nav-link px-2 text-muted"
-              ><i class="fab fa-github"></i
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a
-              href="https://www.linkedin.com/in/isyedhannan"
-              class="nav-link px-2 text-muted"
-              >Linkedin</a
-            >
-          </li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2021 Syed Abdul Hannan</p>
-      </footer>
-    </div> -->
+  
 
     <!-- Optional JavaScript; choose one of the two! -->
 
