--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
 
     <!-- BODY SECTION  -->
     <div style="text-align: center; border: 3px solid #1f2833; padding: 2em">
+      <p style="text-align: left">
+        Enter a digit to get fibonacci series: (MAX = 1477)
+      </p>
       <input
         id="fibonacci_input"
         class="form-control input-group mb-3 input-group-text"
         type="number"
-        placeholder="Enter the digit to get fibonacci series (MAX = 1477)"
+        placeholder="Enter a digit"
       />
       <br />
       <button
@@ -106,13 +109,21 @@
         padding: 4em;
       "
     >
-      <a href="https://github.com/syedhannan" style="color: black" target="_blank">Github</a> |
-      <a href="https://www.linkedin.com/in/isyedhannan" style="color: black" target="_blank"
+      <a
+        href="https://github.com/syedhannan"
+        style="color: black"
+        target="_blank"
+        >Github</a
+      >
+      |
+      <a
+        href="https://www.linkedin.com/in/isyedhannan"
+        style="color: black"
+        target="_blank"
         >LinkedIn</a
       >
       <h4>© Syed Abdul Hannan</h4>
     </div>
-  
 
     <!-- Optional JavaScript; choose one of the two! -->
 
